# charleslow.github.io

./: .gitignore  README.md  _config.yml
bible/: README.md  book.toml  format.py
bible/book/: 1tim.html  2tim.html  404.html  index.html  print.html  searchindex.js  searchindex.json
bible/raw/: 1 Timothy-1.txt  1 Timothy-2.txt  1 Timothy-3.txt  1 Timothy-4.txt  1 Timothy-5.txt  1 Timothy-6.txt
bible/src/: 1tim.md  2tim.md  SUMMARY.md
binomial_coefficient/: index.html  style.css
distributions/: Distributions.Rmd  Distributions.html  index.html
flats_per_town/: cleaned.csv  index.html
grid_visualization/: README.md  index.html
linear_algebra_done_right/: book.toml
linear_algebra_done_right/book/: 404.html  index.html  print.html  searchindex.js  (+1 more)
multinomial_logit/: index.html
notebook/: README.md  arxiv_urls.txt  book.toml  format.py  styles.css
notebook/scripts/: lightgbm_memory.py  memory_profiling.py  pyproject.toml
notebook/scripts/.devcontainer/: Dockerfile  devcontainer.json
notebook/scripts/ab_test/: calculator.py  simulations.py
notebook/scripts/inheritance/: inheritance.py
notebook/scripts/lightgbm_memory/: lightgbm_memory.py
notebook/scripts/llm/: test_llm_generation.py
notebook/scripts/lstm/: lstm.py
notebook/scripts/mapping/: test_mapping_speed.py  test_mapping_speed_vector.py
planning_area_plot/: index.html  mp14_planning_area.geojson
pmpp/: index.html
recommenders/: 404.html  README.md  index.html  print.html
simpsons_paradox/: drawchart.js  index.html  style.css
softmax_from_scratch/: index.html
ssoc_plot/: Convert SSOC to JSON.R  data.json  index.html
(+294 files in other folders)
