[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Charles Low <charleslow88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
memory-profiler = "^0.61.0"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
