[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Charles Low <charleslow88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.0.0,<2.1.0"
lightgbm = "^4.1.0"
numpy = ">=1.25.1,<1.26.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.2"
flaml = "^2.1.1"
tokenizers = "^0.15.0"
transformers = "^4.36.2"
bitsandbytes = "^0.41.3.post2"
torch = "^2.1.2"
ipython = "^8.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
